[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Decorations/spacestation1_trpbg.png" type="Texture" id=1]
[ext_resource path="res://Levels/Items/SpawnPoint.gd" type="Script" id=2]
[ext_resource path="res://Common/Themes/ClassicTheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/sounds/release.ogg" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[node name="SpawnPoint" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.0825449, 0.0825449 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 990, 1024 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -8.0
margin_top = -67.0
margin_right = 8.0
margin_bottom = -53.0
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="release" from="." to="." method="_on_SpawnPoint_release"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
